force-app/main/default/objects/Security_Health_Check_Risk__c.object
<CustomObject>
    <description>Synched Information about the status of a Health Check Risk on a given day</description>
    <fields>
        <fullName>Change__c</fullName>
        <formula>IF( ISPICKVAL(RiskType__c,&quot;HIGH_RISK&quot;),
IF( Previous_Rating__c !=&quot;HIGH_RISK&quot;, &quot;WORSE&quot;, &quot;SAME&quot;)
,
IF(ISPICKVAL(RiskType__c, &quot;MEDIUM_RISK&quot;),
IF( Previous_Rating__c==&quot;HIGH_RISK&quot;, &quot;BETTER&quot;,
IF( Previous_Rating__c==&quot;MEDIU _RISK&quot;, &quot;SAME&quot;, &quot;WORSE&quot;)),

IF(ISPICKVAL(RiskType__c,&quot;MEETS_STANDARD&quot;),

IF(Previous_Rating__c==&quot;MEETS_STANDARD&quot;, &quot;SAME&quot;, &quot;BETTER&quot;
),
&quot;UNKNOWN&quot;
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurableId__c</fullName>
        <label>DurableId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgValueRaw__c</fullName>
        <label>OrgValueRaw</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgValue__c</fullName>
        <label>OrgValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Rating__c</fullName>
        <label>Previous Rating</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskType__c</fullName>
        <label>RiskType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH_RISK</fullName>
                </value>
                <value>
                    <fullName>MEDIUM_RISK</fullName>
                </value>
                <value>
                    <fullName>MEETS_STANDARD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Health_Check__c</fullName>
        <label>Security Health Check</label>
        <referenceTo>Security_Health_Check__c</referenceTo>
        <relationshipLabel>Security Health Check Risks</relationshipLabel>
        <relationshipName>Security_Health_Check_Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SettingGroup__c</fullName>
        <label>SettingGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettingRiskCategory__c</fullName>
        <label>SettingRiskCategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH_RISK</fullName>
                </value>
                <value>
                    <fullName>MEDIUM_RISK</fullName>
                </value>
                <value>
                    <fullName>LOW_RISK</fullName>
                </value>
                <value>
                    <fullName>INFORMATIONAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <label>Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardValueRaw__c</fullName>
        <label>StandardValueRaw</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardValue__c</fullName>
        <label>StandardValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Security Health Check Risk</label>
    <nameField>
        <displayFormat>SECRISK-{0000}</displayFormat>
        <label>Security Health Check Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Health Check Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>